[MD settings] set default fixed font size

This CL fixes a bug where the default fixed font size is not saved in
the prefs.

BUG=612535
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2066123002
Cr-Commit-Position: refs/heads/master@{#400070}

Former-commit-id: b0a3e2fd2fd68600528faa0796120fd395219437