chrome/browser/extensions/api/settings_private/prefs_util.cc
@@ -73,6 +73,8 @@ const PrefsUtil::TypedPrefMap& PrefsUtil::GetWhitelistedKeys() {
   // Appearance settings.
   (*s_whitelist)["extensions.theme.id"] =
       settings_private::PrefType::PREF_TYPE_STRING;
+  (*s_whitelist)["webkit.webprefs.default_fixed_font_size"] =
+      settings_private::PrefType::PREF_TYPE_NUMBER;
   (*s_whitelist)["webkit.webprefs.default_font_size"] =
       settings_private::PrefType::PREF_TYPE_NUMBER;
   (*s_whitelist)["webkit.webprefs.minimum_font_size"] =
